--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ body {
     margin-bottom: 50px;
 }
 
+/*#region header div*/
 .header {
     width: 100%;
     text-align: center;
@@ -31,6 +32,7 @@ body {
 #logo {
     height: 95%;
 }
+/*#endregion*/
 
 .content {
     display: flex;
@@ -39,9 +41,9 @@ body {
     height: 80%;
 }
 
+/*#region btns div*/
 .btns {
     display: inline-block;
-    background-color: #091832;
     color: #54A3C6;
 
     width: 20%;
@@ -60,6 +62,64 @@ button:hover {
 button:active {
     transform: scale(0.95);
 }
+
+nav {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    height: 100%;
+}
+
+.hero_btn {
+    border-radius: 5px;
+    border: 2px solid #54A3C6;
+    background-color: #091832;
+    color: #54A3C6;
+    font-family: 'Quicksand', monospace;
+    font-size: 27px;
+    text-transform: uppercase;
+    cursor: pointer;
+    height: 18%;
+}
+
+.hero_btn.active {
+    background-color: #1B74A8;
+    color: #CCEFFF;
+}
+
+.pageSelectors {
+    height: 7%;
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+}
+
+#page {
+    border-radius: 5px;
+    border: 2px solid #54A3C6;
+    background-color: #091832;
+    color: #54A3C6;
+    text-align: center;
+    font-family: 'Quicksand', monospace;
+    font-size: 27px;
+    text-transform: uppercase;
+
+    width: 19%;
+}
+
+#btnPrev, #btnNext {
+    border-radius: 5px;
+    border: 2px solid #54A3C6;
+    background-color: #091832;
+    color: #54A3C6;
+    font-family: 'Quicksand', monospace;
+    font-size: 15px;
+    text-transform: uppercase;
+    cursor: pointer;
+    height: 100%;
+    width: 40%;
+}
+/*#endregion*/
 
 .description {
     display: inline-block;
@@ -105,37 +165,6 @@ button:active {
     border: 2px solid #54A3C6;
     width: 100%;
     height: 87%;
-}
-
-nav {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    height: 100%;
-}
-
-nav button {
-    background-color: #f0f0f0;
-    border: none;
-    cursor: pointer;
-    height: 20%;
-
-    flex-grow: 1;
-}
-
-.hero_btn {
-    border-radius: 5px;
-    border: 2px solid #54A3C6;
-    background-color: #091832;
-    color: #54A3C6;
-    font-family: 'Quicksand', monospace;
-    font-size: 27px;
-    text-transform: uppercase;
-}
-
-.hero_btn.active {
-    background-color: #1B74A8;
-    color: #CCEFFF;
 }
 
 main img {
