--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,9 @@ body {
     background-color: #091832;
     color: #54A3C6;
     height: 20%;
+
+    min-width: 1424px;
+    min-height: 135px;
 }
 
 #logo {
@@ -39,6 +42,9 @@ body {
     width: 100%;
     justify-content: space-between;
     height: 80%;
+
+    min-width: 1424px;
+    min-height: 554px;
 }
 
 /*#region btns div*/
@@ -49,18 +55,10 @@ body {
     width: 20%;
 }
 
-button {
-    transition: all 0.2s ease-in-out;
-}
-
-button:hover {
+.hero_btn:hover, #btnPrev:hover, #btnNext:hover {
     background-color: #0f3269; /* Altere a cor conforme desejar */
     color: #74cdf3;
     transform: scale(1.01);
-}
-
-button:active {
-    transform: scale(0.95);
 }
 
 nav {
@@ -80,6 +78,7 @@ nav {
     text-transform: uppercase;
     cursor: pointer;
     height: 18%;
+    transition: all 0.2s ease-in-out;
 }
 
 .hero_btn.active {
@@ -118,6 +117,7 @@ nav {
     cursor: pointer;
     height: 100%;
     width: 40%;
+    transition: all 0.2s ease-in-out;
 }
 /*#endregion*/
 
@@ -131,6 +131,8 @@ nav {
     text-align: left;
     padding: 40px;
     font-family: 'Fira Code', monospace;
+
+    overflow: auto;
 
     width: 39%;
 }
@@ -160,12 +162,56 @@ nav {
 }
 
 .image {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
     object-fit: cover;
     object-position: top;
-    border: 2px solid #54A3C6;
     width: 100%;
     height: 87%;
-}
+    border: 2px solid #54A3C6;
+  }
+  
+  #image {
+    object-fit: cover;
+    object-position: top;
+    width: 100%;
+    height: 100%;
+  
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+  }
+  
+  #prevImgBtn, #nextImgBtn {
+    width: 5%;
+    height: 100%;
+
+    background-color: rgba(255, 255, 255, 0.05);
+    border: none;
+  
+    position: absolute;
+    top: 0;
+    z-index: 1;
+  }
+  
+  #prevImgBtn {
+    left: 0;
+  }
+  
+  #nextImgBtn {
+    right: 0;
+  }
+
+  #prevImgBtn:hover, #nextImgBtn:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+  }
+
+  #prevImgBtn:active, #nextImgBtn:active {
+    background-color: rgba(255, 255, 255, 0.15);;
+  }
 
 main img {
     max-width: 100%;
